fixed bugs after merge conflicts